[package]
name = "rource"
version = "0.3.0"
edition = "2021"
authors = ["WelshProgrammer"]
description = "A tool to help you generate a Gource log for all your repositories"
license = "Apache-2.0"
readme = "readme.md"
repository = "https://github.com/AdamLeyshon/rource"
homepage = "https://www.thecodecache.net"
keywords = ["gource", "git", "log", "generator", "cli"]
categories = ["development-tools", "command-line-utilities", "parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.18.1"
serde = { version = "1.0.193", features = ["derive"] }
csv = "1.3.0"
clap = { version = "4.4.12", features = ["derive"] }
anyhow = "1.0.77"
shellexpand = { version = "3.1.0", features = ["tilde", "path"] }
log = "0.4.20"
sigpipe = "0.1.3"
ext-sort = { version = "0.1.4", features = ["memory-limit"] }
deepsize = "0.2.0"
serde_json = "1.0.108"
serde_cbor = "0.11.2"
serde_bytes = "0.11.13"
rayon = { version = "1.8.0" }
indicatif = { version = "0.17.7", features = ["rayon"] }
indicatif-log-bridge = "0.2.2"
env_logger = { version = "0.10.1", features = [] }
rand = "0.8.5"

